--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
   <input type="text" id="name" name="name" required
        minlength="4" maxlength="8" size="10" [(ngModel)]="myModel" (change)="saverange()">
 </div>
+
+
+<app-inputside-acomponent></app-inputside-acomponent>
+<app-input-side-bcomponent></app-input-side-bcomponent>
